--- a/source/_patterns/01-atoms/forms/_radio.scss
+++ b/source/_patterns/01-atoms/forms/_radio.scss
@@ -59,10 +59,9 @@
 
   &.jcc-radio--bordered {
     .usa-radio__label {
-      @include u-border(2px);
-      @include u-padding-y(1.5);
-      @include u-padding-left(6);
-      @include u-padding-right(3);
+      @include u-padding-y(2.5);
+      @include u-padding-left(10);
+      @include u-padding-right(4);
       text-indent: -3.5rem;
       border-radius: 3rem;
     }
